<?xml version="1.0"?>
<package format="3">  modern ROS 2 standard
  <name>web_teleop</name>
  <version>0.0.1</version>
  <description>Web-based teleoperation controller</description>

  <maintainer email="alzateleon@stud.hs-heilbronn.de">You</maintainer>
  <license>MIT</license>   open source 

  <!-- This tells colcon it is a Python package -->
  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
